# sdl3_diligent_test

./: .gitmodules  CMakeLists.txt
source/: diligent_sample.cpp  diligent_sample.h  main.cpp
